# Sagittarius

./: .gitignore  AGENTS.md  COMPREHENSIVE_VIZ_DEMO_REPORT.md  PHASE19_IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE_VIZ.md  README.md  REQUIREMENTS.md  SWEEP_VIZ_IMPLEMENTATION_SUMMARY.md  VISUALIZATION_API.md  VISUALIZATION_API_P0.md  VISUALIZATION_API_P1.md  VISUALIZATION_API_P2.md  VIZ_API_REFERENCE.md  VIZ_API_REFERENCE_CN.md  debug_api.py  debug_local.py  examples_phase19_viz.py  examples_register_bitstring.py  mcwf_result_with_trajectories.json  publish_ghcr.sh  publish_image.sh  pytest_label_fix_output.txt  pytest_viz_output.txt  pytest_viz_partial_output.txt  test_order.py  verify_blockade.py
sagittarius_py/: LICENSE  MANIFEST.in  README.md  animation_frames.json  check_env.py  debug_gaussian.py  example_1_aqc_solution.json  example_2_algorithm_comparison.json  juliapkg.json  pyproject.toml
sagittarius_py/examples/: basis_diagnostics_demo.py  benchmark_perf_demo.py  complete_viz_demo.py  correlation_viz_demo.py  diagnostics_demo.py  geometry_diagnostics_demo.py  minimal_viz_examples.py  mwis_viz_demo.py  small_system_debug_demo.py  spatial_snapshot_demo.py  sweep_viz_examples.py  trajectory_storage_demo.py
sagittarius_py/projects/mwis_udg/: CONCLUSION.md  README.md  baselines.py  batch_verify.py  benchmark_mwis.py  example_mwis.py  mwis_benchmark_results.csv  mwis_solver.py  solution_verify.py  stress_test_hardness.py  test_gpu_mwis.py
sagittarius_py/sagittarius/: __init__.py  ablation.py  api.py  api.py-FIX  benchmarking.py  cli.py  cluster.py  events.py  juliapkg-cuda.json  juliapkg.json  pulse.py  runtime.py  trajectory_contract.py
sagittarius_py/sagittarius/julia/Sagittarius.jl/: Manifest.toml  Project.toml
sagittarius_py/sagittarius/julia/Sagittarius.jl/src/: Sagittarius.jl  cluster.jl  logging.jl  program.jl  solver.jl
sagittarius_py/sagittarius/julia/Sagittarius.jl/test/: runtests.jl
sagittarius_py/sagittarius/viz/: README.md  README_diagnostics.md  __init__.py  basis_diagnostics.py  benchmark_governed.py  benchmark_perf.py  correlation_viz.py  diagnostics.py  export.py  geometry_diagnostics.py  mwis_diagnostics.py  mwis_governed.py  mwis_viz.py  pulse.py  register.py  report.py  result.py  small_system_debug.py  spatial_snapshot.py  sweep.py
sagittarius_py/sagittarius_py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sagittarius_py/tests/: README.md  conftest.py  test_ablation_benchmarks.py  test_api_v2.py  test_benchmark_artifacts.py  test_benchmarks.py  test_cli.py  test_cluster.py  test_cross_language_golden.py  test_dense_vs_reduced_validation.py  test_event_taxonomy.py  test_failure_diagnostics.py  test_gpu_acceleration.py  test_installation_docs.py  test_invariants.py  test_julia_native_api.py  test_julia_project_metadata.py  test_juliapkg_packaging.py  test_local_pulses.py  test_mc_trajectories.py  test_measurement_sampling.py  test_mwis_batch_verification.py  test_observable_library.py  test_open_system_sanity.py  test_packaging_artifacts.py  test_phase8_pulse_contract.py  test_physics.py  test_pulse.py  test_pulse_dict_conversion.py  test_register_constructors.py  test_runtime_hardening.py  test_serialization.py  test_solver_configuration.py  test_viz_basis_diagnostics.py  test_viz_benchmark_perf.py  test_viz_correlation.py  test_viz_diagnostics.py  test_viz_export.py  test_viz_geometry_diagnostics.py  test_viz_mwis.py  (+10 more)
sagittarius_py/tests/test_figs/: mwis_benchmark_test.json  mwis_benchmark_workflow.json
sagittarius_py/tests/test_performance/: README.md  benchmark_ablation.py  benchmark_cluster.py  benchmark_gpu.py  benchmark_scaling.py  gpu_bench_conclusion.md
(+180 files in other folders)
