[project]
name = "sagittarius-py"
version = "0.1.0"
description = "A high-performance Neutral Atom quantum emulator"
requires-python = ">=3.9"
dependencies = [
    "juliacall",
    "numpy",
    "pandas",
    "matplotlib",
    "networkx",
    "docplex>=2.32.264",
    "pulp>=3.3.0",
    "seaborn>=0.13.2",
    "scipy>=1.13.1",
]

[dependency-groups]
dev = [
    "pytest",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sagittarius"]

[tool.pytest.ini_options]
markers = [
    "requires_julia_backend: tests that require a working Julia/PythonCall backend",
]
