[project]
name = "sagittarius-py"
version = "0.1.0"
description = "A neutral-atom quantum emulator with Julia and Python SDKs"
requires-python = ">=3.10"
dependencies = [
    "juliacall>=0.9.35",
    "numpy",
    "pandas",
    "matplotlib",
    "networkx",
    "docplex>=2.32.264",
    "pulp>=3.3.0",
    "seaborn>=0.13.2",
    "scipy>=1.13.1",
    "juliapkg>=0.1.24",
]

[dependency-groups]
dev = [
    "pytest",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sagittarius"]

[tool.setuptools.package-data]
sagittarius = ["juliapkg.json"]

[tool.pytest.ini_options]
markers = [
    "requires_julia_backend: tests that require a working Julia/PythonCall backend",
    "requires_cuda_backend: tests that require SAGITTARIUS_ENABLE_GPU_TESTS=1 and a working CUDA backend",
]
