[project]
name = "sagittarius-py"
version = "1.0.1"
description = "A neutral-atom quantum emulator with Julia and Python SDKs"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Sagittarius contributors" },
]
keywords = [
    "neutral atoms",
    "rydberg",
    "quantum simulation",
    "julia",
    "scientific computing",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "juliacall>=0.9.35",
    "numpy",
    "pandas",
    "matplotlib",
    "networkx",
    "docplex>=2.32.264",
    "pulp>=3.3.0",
    "seaborn>=0.13.2",
    "scipy>=1.13.1",
    "juliapkg>=0.1.24",
    "click",
]

[project.urls]
Documentation = "https://github.com/Ouyxw/Sagittarius/tree/main/docs"
Homepage = "https://github.com/Ouyxw/Sagittarius"
Issues = "https://github.com/Ouyxw/Sagittarius/issues"
Source = "https://github.com/Ouyxw/Sagittarius"

[project.scripts]
sagittarius = "sagittarius.cli:main"

[dependency-groups]
dev = [
    "pytest",
    "tomli; python_version < '3.11'",
    "twine",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sagittarius"]

[tool.setuptools.package-data]
sagittarius = [
    "juliapkg.json",
    "juliapkg-cuda.json",
    "julia/Sagittarius.jl/Project.toml",
    "julia/Sagittarius.jl/Manifest.toml",
    "julia/Sagittarius.jl/src/*.jl",
]

[tool.pytest.ini_options]
markers = [
    "requires_julia_backend: tests that require a working Julia/PythonCall backend",
    "requires_cuda_backend: tests that require SAGITTARIUS_ENABLE_GPU_TESTS=1 and a working CUDA backend",
]
